# gpu-final-project

./: .gitignore  CMakeLists.txt  PLANNING.md  README.md  build-with-rf.sh  build.sh
doc/: links.txt  refs.bib  sampling_airplane_notes.txt  timings.ods  timings.txt
include/: cuda_util.h  grid-search.h  sampling.h
misc_files/: test_sampling.c
python/: test.py  test_grid_search.py  test_sampling.py
src/: cuda_util.cu  grid-search.cu  main.cu  sampling.cu
